# doom-pezzaliapp-edition

./: README.md  app.js  index.html  manifest.webmanifest  sw.js  ui.css  wasm-glue.js
.github/workflows/: build-engine.yml
doomgeneric/: CMakeLists.txt  doomgeneric.c  doomgeneric_sdl.c  doomgeneric_wasm.c
engine/: engine.js  engine.wasm
